* 6aa681ffc5671deb49e3a99b9806d0062aa168e0
|   Author: kyle
|   Date: 2013-10-27 23:47:54 -0500
|   Comment: Huge changes to the way data is read in.  Added a FAQ to help document some of these standards.  This should help tremendously with future functions.  Wrote (or rewrote) tests to ensure it all works as expected.  Ultimately, this will allow me to simply send DATA as a herestring to any function or external program... the program merely needs to support consumption of STDIN.
| 
|  
* fece308360bd1d26fdf071de543d57f78a9ae82c
|   Author: kyle
|   Date: 2013-10-25 22:30:54 -0500
|   Comment: Implementing the changes required to read from STDIN more easily.  Needs more work, but going to bed and I want to save this progress.
| 
|  
* eea94768ed5b115500d37f42c185d102774fc0ff
|   Author: kyle
|   Date: 2013-10-24 22:08:07 -0500
|   Comment: Started researching how to read STDIN in functions for piping.  It's quite possible and whatnot but it has a couple repercussions.  First there's a race condition causing SIGPIPEs when testing with read -t 0.  Second, any output not echo'd with a new line will not be read properly (last line will hang).  I'd like SBT functions to auto-detect STDIN but I don't think it's possible.  So I either need a switch for it as a standard; or I need the rule to be: if no args are sent, try to read from stdin, then error out if still no data to work with.
| 
|  
* ab7c873703086af354b1398e1b12a7ad0fff1f0b
|   Author: kyle
|   Date: 2013-10-23 21:42:42 -0500
|   Comment: Added another test for kicks.
| 
|  
* 2f4fcddb2c0a7f82e02320030c9800890731899c
|   Author: kyle
|   Date: 2013-10-23 21:17:41 -0500
|   Comment: Finished the CountOf function.  It's not as fast as I'd like, but I'm not sure how to improve the performance but still remain as flexible.
| 
|  
* e3a3f5e5a33470f9c6003859f856425edb0c8188
|   Author: kyle
|   Date: 2013-10-22 22:43:14 -0500